feat: comple favorite feature for user
